# scratch

./: README.md  READNE.md  banana_pancake_trail.md
MessagePack/: Cargo.toml
MessagePack/src/: main.rs
data-simulator/: Dockerfile  README.md  entrypoint.sh
dotnetdebug/: Program.fs  dotnetdebug.sln
egui-tests/: Cargo.toml
egui-tests/src/: main.rs
embeded_pio/: README.md
embeded_pio/src/: main.cpp
explorerpreviewer/: PerfectSteaks.recipe  PreviewHandlerSDKSample.sln  PreviewHandlerSDKSample.vcxproj
flutter-static/test_static/: README.md  pubspec.yaml
fsharp-bench/: Program.fs  README.md  fsharp-bench.fsproj  fsharp-bench.sln
go-c-binding/: justfile  main.go  sub.h
gohdf5/: README.md  go.mod  main.go  make_test_h5.py
hdf5_compression_test/: Cargo.toml
hdf5_compression_test/src/: main.rs
iac-terraform/: .terraform.lock.hcl  justfile  main.tf
justtest/: README.md  justfile
justtest/testdir/: abcfile
leapsecs/: Cargo.toml
leapsecs/src/: main.rs
rust-c-binding/: Cargo.toml  add.h  build.rs  justfile  sub.c
rust-c-binding/clib/: add.c  sub.c
rust-c-binding/src/: main.rs
rust-flatbuffers/: Cargo.toml  build.rs
rust-flatbuffers/schemes/: small.fbs
rust-flatbuffers/src/: main.rs
rustapi/: Cargo.toml
rustapi/src/: main.rs
rustprg/: Cargo.toml
rustprg/src/: main.rs
rustrtc/: Cargo.toml
rustrtc/src/: main.rs
rustsysinfo/: Cargo.toml
rustsysinfo/src/: main.rs
test_ffmpeg_live/: Cargo.toml
test_ffmpeg_live/src/: main.rs
uplotrust/: Cargo.toml
uplotrust/src/: main.rs
uplotrust/src/static/: index.html
(+16 files in other folders)
