[package]
name = "uplotrust"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
lazy_static = "1.5.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
warp = { version = "0.4.0", features = ["async-compression", "compression", "multipart", "server", "test", "websocket"] }
